# nix-config

./: .gitattributes  README.md  commands.md  configuration.nix  devshells.nix  flake.nix  justfile  result  vars.nix
bash/: .bash_profile  .bashrc  bash.nix
config/: default.nix  theme.nix
devshells/: default.nix  dev.nix  docs.nix  lua.nix  nix.nix
foot/: foot.nix
hosts/ouz/: configuration.nix  hardware-configuration.nix
lib/: default.nix  flake-outputs.nix  modules.nix  packages.nix
modules/: default.nix
modules/applications/: default.nix  obs.nix  zen.nix
modules/core/: bash.nix  default.nix  git.nix  tmux.nix  utils.nix
modules/core/nvim/: default.nix
modules/de/: cursor.nix  filemanager.nix  hyprlauncher.nix
modules/de/hypr/: default.nix  hyprland.lua  hyprpaper.conf
modules/desktop/: clipboard.nix  cosmic.nix  cursor.nix  dconf.nix  default.nix  fonts.nix  foot.nix  fuzzel.nix  hyprpaper.nix  kde.nix  mako.nix  nautilus.nix  niri.nix  picker.nix  polkit.nix  swaybg.nix  thunar.nix  utils.nix  waybar.nix  zen.nix
modules/desktop/hypr/: default.nix  hyprland.lua  hyprlauncher.conf  hyprpaper.conf
modules/desktop/hyprland/: .luarc.json  default.nix  hyprland.lua  hyprlauncher.conf  hyprpaper.conf  hyprtoolkit.conf
modules/desktop/mako/: config  default.nix
modules/desktop/sway/: default.nix  sway.nix
modules/desktop/wofi/: config
modules/development/: default.nix  gh.nix  lsp.nix  pi.nix  stats.nix
modules/gui/: media.nix
modules/hardware/: brightness.nix  default.nix  logitech.nix  nvidia.nix  swap.nix
modules/programs/: bash.nix  cli.nix  default.nix  development.nix  foot.nix  git.nix  gui.nix  tmux.nix  yazi.nix
modules/system/: bash.nix  core.nix  default.nix  kernel.nix  locale.nix  network.nix  nix.nix  users.nix
pkgs/: default.nix
pkgs/oziosevka/: default.nix  private-build-plans.toml
pkgs/treesitter-runtime/: default.nix
profiles/: applications.nix  core.nix  desktop.nix  development.nix  gaming.nix  hardware.nix  laptop.nix  system.nix
programs/: git.nix  yazi.nix
programs/nvim/: nvim.nix
programs/tmux/: tmux.conf
scripts/treesitter-builder/: ex.sh  parsers.txt
templates/: default.nix
templates/cpp/: flake.nix
templates/devenv/: devenv.nix
templates/docs/: README.md
templates/empty/: deneme.nix  flake.nix  shell.nix
templates/mono/: .prettierignore  Cargo.toml  README.md  _gitignore  clippy.toml  justfile  package.json  pyproject.toml  rustfmt.toml  zensical.toml
templates/mono/analysis/: __init__.py  __main__.py  genome.py  html_report.py  io.py  labels.py  pipeline.py  plots.py  report.html  summary.py
templates/mono/crates/moonai/: Cargo.toml
templates/mono/crates/moonai-config/: Cargo.toml
templates/mono/crates/moonai-config/src/: cli.rs  config.rs  error.rs  lib.rs  lua.rs  settings.rs  ui.rs
templates/mono/crates/moonai-evolution/: Cargo.toml  build.rs
templates/mono/crates/moonai-evolution/src/: compiled.rs  crossover.rs  evolution.rs  genome.rs  innovation.rs  lib.rs  mutation.rs  network.rs  network_compilation.cu  species.rs
templates/mono/crates/moonai-metrics/: Cargo.toml
templates/mono/crates/moonai-metrics/src/: logger.rs
templates/mono/crates/moonai-simulation/: Cargo.toml  build.rs
templates/mono/crates/moonai-simulation/src/: buffers.rs  checks.rs  compaction.rs  inference.rs  kernel.cu  lib.rs  metrics_reduce.rs  reproduction.rs  simulation.rs
templates/mono/crates/moonai-types/: Cargo.toml
templates/mono/crates/moonai-types/src/: connection.rs  lib.rs  node.rs  vec2.rs
templates/mono/crates/moonai-ui/: Cargo.toml
templates/mono/crates/moonai-ui/src/: app.rs  lib.rs  render.rs  types.rs
templates/mono/crates/moonai/src/: main.rs  signal.rs
templates/mono/docs/: about.md  index.md  installation.md  usage.md
templates/mono/docs/_assets/: extra.css
templates/mono/docs/internals/: architecture.md  roadmap.md  standarts.md  structure.md  workflow.md
templates/mono/runtime/config/: config.lua  settings.json
templates/python/: flake.nix  shell.nix
templates/rust/: shell.nix
templates/tex/: flake.nix
templates/typescript/: shell.nix
tmux/: tmux.conf
vars/: settings.nix  theme.nix
yazi/: theme.toml  yazi.nix  yazi.toml
(+160 files in other folders)
