[workspace]
members = ["crates/*"]
default-members = ["crates/moonai"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95.0"
authors = ["MoonAI"]
license = "MIT"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
mlua = "0.9"
anyhow = "1.0"
thiserror = "1.0"
cc = "1.0"

[workspace.lints.rust]
elided_lifetimes_in_paths = "deny"
absolute_paths_not_starting_with_crate = "deny"
unsafe_code = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"

dbg_macro = "deny"
expect_used = "deny"
needless_collect = "deny"
panic = "deny"
redundant_clone = "deny"
redundant_closure_for_method_calls = "deny"
trivially_copy_pass_by_ref = "deny"
todo = "deny"
uninlined_format_args = "deny"
unwrap_used = "deny"
implicit_clone = "deny"
inefficient_to_string = "deny"
large_stack_arrays = "deny"
missing_const_for_fn = "deny"
needless_pass_by_value = "deny"
option_if_let_else = "deny"
print_stdout = "deny"
print_stderr = "deny"
clone_on_ref_ptr = "deny"
rest_pat_in_fully_bound_structs = "deny"
str_to_string = "deny"

[profile.release]
strip = true
lto = true
panic = 'abort'
incremental = true
codegen-units = 1
