[build-system]
requires = ["uv_build>=0.11.8,<0.12"]
build-backend = "uv_build"

[project]
name = "moonai-tools"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "networkx>=3.0",
    "jinja2>=3.1",
]

[tool.uv.build-backend]
module-name = ["analysis"]
module-root = ""
namespace = false

[project.scripts]
analysis = "analysis.__main__:main"

[dependency-groups]
dev = ["ruff>=0.15.12", "pytest"]
docs = ["zensical>=0.0.37"]

# Ruff format and lint rules
[tool.ruff]
line-length = 120
target-version = "py314"
lint.select = ["E", "F", "I", "UP"]
