[package]
name = "moonai-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
moonai-types = { path = "../moonai-types" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
mlua = { version = "0.9", features = ["luau"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
