[package]
name = "moonai-simulation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
moonai-types = { path = "../moonai-types" }
moonai-config = { path = "../moonai-config" }
moonai-evolution = { path = "../moonai-evolution" }
cc = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
cc = "1.0"
