[package]
name = "moonai-ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
moonai-types = { path = "../moonai-types" }
moonai-config = { path = "../moonai-config" }
moonai-evolution = { path = "../moonai-evolution" }
moonai-simulation = { path = "../moonai-simulation" }
anyhow = { workspace = true }
