[package]
name = "moonai"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
moonai-types = { path = "../moonai-types" }
moonai-config = { path = "../moonai-config" }
moonai-evolution = { path = "../moonai-evolution" }
moonai-simulation = { path = "../moonai-simulation" }
moonai-metrics = { path = "../moonai-metrics" }
moonai-ui = { path = "../moonai-ui" }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ctrlc = "3.0"
clap = { workspace = true }
